# QalamAI

backend/: .gitignore  AGENT_INSTRUCTION.md  Doc.md  main.py  pyproject.toml  requirements.txt
backend/ai/: fact_checker.py  flow.py  groq_service.py  media_generator.py  writing_tools.py
backend/config/: db.py  db_helpers.py
backend/data/: file_parser.py  story.txt
backend/routers/: analysis.py  media.py  scripts.py  users.py
backend/services/: PersonaCreator.ipynb  contradiction_detector.py  enhancement_service.py  knowledge_graph.py  persona_generator.py  style_transformer.py
backend/tests/: test_comic_generator.py  test_contradiction.py  test_db.py  test_file_parser.py  test_kg.py  test_kg_end_to_end.py
frontend/myapp/: README.md  package-lock.json  package.json  tsconfig.json
frontend/myapp/src/app/: globals.css  page.tsx
frontend/myapp/src/app/dashboard/: page.tsx
frontend/myapp/src/app/projects/: page.tsx
frontend/myapp/src/components/editor/: AIActionBar.tsx  EditorToolbar.tsx  FileUploadZone.tsx  KnowledgeGraph.tsx  LeftSidebar.tsx  RightSidebar.tsx
frontend/myapp/src/components/homeCards/: CardCarouselParent.tsx
frontend/myapp/src/components/insight/: GraphCanvas.tsx  PersonaCards.tsx
frontend/myapp/src/components/landing/: CTA.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Pricing.tsx  Testimonials.tsx
frontend/myapp/src/components/layout/: Footer.tsx  (+1 more)
frontend/myapp/src/hooks/: useProjects.ts
frontend/myapp/src/lib/: animations.ts  api.ts  commits.ts  insightApi.ts  knowledgeGraph.ts
frontend/myapp/src/types/: project.ts
(+10 files in other folders)
